Fixed text alignment issue

--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -47,6 +47,7 @@ h1 {
   padding-top: '2rem';
   padding-bottom: '2rem';
   overflow: 'hidden';
+  text-align: center;
 }
 
 .login-link {
